<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoideaEvent</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="home">首页</string>
    <string name="usercenter">个人中心</string>
    <string name="add">发布新创意</string>
    <string name="creative">创意</string>
    <string name="project">项目</string>
    <string name="event">事件</string>
    <string name="group">圈子</string>
    <string name="invite">邀请朋友</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    <string name="news">消息</string>
    <string name="newslist">消息列表</string>
    <string name="creativelist">创意列表</string>
    <string name="projectlist">项目列表</string>
    <string name="find">发现</string>
    <string name="publicidea">公共创意</string>
    <string name="interestidea">感兴趣的创意</string>
    <string name="recommend">推荐</string>
    <string name="attention">关注</string>
</resources>