<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_usercenter"
            style="@style/btn_style"
            android:text="@string/usercenter" />

        <Button
            android:id="@+id/btn_message"
            style="@style/btn_style"
            android:text="@string/news" />

        <Button
            android:id="@+id/btn_add"
            style="@style/btn_style"
            android:text="@string/add" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_fraction"
        style="@style/tv_style"
        />

    <Button
        android:id="@+id/btn_creative"
        style="@style/btn_style"
        android:text="@string/creative" />

    <Button
        android:id="@+id/btn_project"
        style="@style/btn_style"
        android:text="@string/project" />

    <Button
        android:id="@+id/btn_event"
        style="@style/btn_style"
        android:text="@string/event" />

    <Button
        android:id="@+id/btn_group"
        style="@style/btn_style"
        android:text="@string/group" />

    <Button
        android:id="@+id/btn_invite"
        style="@style/btn_style"
        android:text="@string/invite" />

    <Button
        android:id="@+id/btn_setting"
        style="@style/btn_style"
        android:text="@string/setting" />

    <Button
        android:id="@+id/btn_quit"
        style="@style/btn_style"
        android:text="@string/quit" />

</LinearLayout>