<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_event"
            style="@style/btn_find_style"
            android:text="@string/event" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="15dp"
            android:background="@color/grey" />

        <Button
            android:id="@+id/btn_publicidea"
            style="@style/btn_find_style"
            android:text="@string/publicidea" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_interestidea"
            style="@style/btn_find_style"
            android:padding="25dp"
            android:text="@string/interestidea" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:background="@color/grey" />

        <Button
            android:id="@+id/btn_recommend"
            style="@style/btn_find_style"
            android:text="@string/recommend" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_project"
            style="@style/btn_find_style"
            android:text="@string/project" />

        <LinearLayout
            android:layout_width="0.5dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="15dp"
            android:background="@color/grey" />

        <Button
            android:id="@+id/btn_attention"
            style="@style/btn_find_style"
            android:text="@string/attention" />
    </LinearLayout>

</LinearLayout>