<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:background="@color/beige" >

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_action_overflow" />
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_act"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.2" >
        </android.support.v4.view.ViewPager>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.9" >

            <Button
                android:id="@+id/btn_newlist"
                style="@style/tv_style"
                android:layout_weight="1"
                android:text="@string/creative" />

            <Button
                android:id="@+id/btn_creativelist"
                style="@style/tv_style"
                android:layout_weight="1"
                android:text="@string/group" />

            <Button
                android:id="@+id/btn_projectlist"
                style="@style/tv_style"
                android:layout_weight="1"
                android:text="@string/find" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:enabled="false"
        android:visibility="gone" />

</FrameLayout>